cmake_minimum_required(VERSION 3.20)
project(H9Review)

set(CMAKE_CXX_STANDARD 14)

add_executable(H9Review main.cpp)

add_executable(AA AA.cpp)
add_executable(BB BB.cpp)
add_executable(CC CC.cpp)
add_executable(DD DD.cpp)
add_executable(EE EE.cpp)
add_executable(FF FF.cpp)
add_executable(GG GG.cpp)
add_executable(HH HH.cpp)